--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
 body {
     color: var(--main);
     background-color: var(--background);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .mask {
